tests/evaluator/should_pass/replicated_seq_comp.csp
channel c : {0,1}

procTest1 = ; x : <0,1> @ c.x -> SKIP
procTest2 = ; x : <> @ c.x -> SKIP
