tests/evaluator/should_fail/rep_link_parallel.csp
channel c

procTest1 = [c <-> c] x : <> @ x
